# sudoku-cli

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/sudoku/: board.h  generator.h  solver.h  types.h  validator.h
scripts/: run-clang-tidy.sh
src/cli/: game.cpp  game.h  input_handler.cpp  input_handler.h  main.cpp  renderer.cpp  renderer.h
src/core/: board.cpp  generator.cpp  solver.cpp  validator.cpp
tests/: CMakeLists.txt  test_board.cpp  test_generator.cpp  test_solver.cpp  test_validator.cpp
